--- a/demo/appinfo.json
+++ b/demo/appinfo.json
@@ -1,15 +1,16 @@
 {
-  "uuid": "9b615506-1fc0-4419-bcfe-a6b124947098",
-  "shortName": "demo",
-  "longName": "demo",
-  "companyName": "MakeAwesomeHappen",
+  "uuid": "2f56fb14-9d70-43ec-b6a1-d94e9ea0f3c3",
+  "shortName": "Linked List Demo",
+  "longName": "Linked List Demo",
+  "companyName": "Matthew Tole",
   "versionCode": 1,
   "versionLabel": "1.0",
+  "sdkVersion": "3",
+  "targetPlatforms": ["aplite", "basalt", "chalk"],
   "watchapp": {
     "watchface": false
   },
   "appKeys": {
-    "dummy": 0
   },
   "resources": {
     "media": []
