--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pebble-linked-list",
-  "version": "1.0.1",
+  "name": "@smallstoneapps/linked-list",
+  "version": "1.1.0",
   "description": "Pebble library for doing linked lists",
   "main": "src/c/linked-list.c",
   "directories": {
@@ -20,9 +20,8 @@
   },
   "homepage": "https://github.com/smallstoneapps/linked-list#readme",
   "pebble": {
-    "uuid": "0590bb20-a457-455b-9d3f-f65f54aa6245",
     "sdkVersion": "3",
-    "enableMultiJS": true,
     "targetPlatforms": ["aplite", "basalt", "chalk"]
-  }
+  },
+  "files": ["dist.zip"]
 }
