--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smallstoneapps/linked-list",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Pebble library for doing linked lists",
   "main": "src/c/linked-list.c",
   "directories": {
@@ -23,5 +23,5 @@
     "sdkVersion": "3",
     "targetPlatforms": ["aplite", "basalt", "chalk"]
   },
-  "files": ["dist.zip"]
+  "files": ["dist.zip", "src/", "include/"]
 }
