--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@smallstoneapps/linked-list",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Pebble library for doing linked lists",
   "main": "src/c/linked-list.c",
   "directories": {
     "test": "tests"
   },
+  "keywords": ["pebble-package"],
   "scripts": {
     "test": "make"
   },
