--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@smallstoneapps/linked-list",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Pebble library for doing linked lists",
   "main": "src/c/linked-list.c",
   "directories": {
     "test": "tests"
   },
-  "keywords": ["pebble-package"],
+  "keywords": [
+    "pebble-package"
+  ],
   "scripts": {
     "test": "make"
   },
@@ -23,7 +25,16 @@
   "pebble": {
     "projectType": "package",
     "sdkVersion": "3",
-    "targetPlatforms": ["aplite", "basalt", "chalk"]
+    "targetPlatforms": [
+      "aplite",
+      "basalt",
+      "chalk",
+      "diorite"
+    ]
   },
-  "files": ["dist.zip", "src/", "include/"]
+  "files": [
+    "dist.zip",
+    "src/",
+    "include/"
+  ]
 }
